--- a/public/asset/css/input.css
+++ b/public/asset/css/input.css
@@ -102,17 +102,20 @@
     background-color: #FF7777;
     color: #fff;
     border-radius: 3px;
-    padding: 4px 6px;
+    padding: 4px 8px;
     text-align: center;
     position: absolute;
     z-index: 10;
-    width: 100%;
-    top: 90%;
+    top: 111%;
+    left: 50%;
+    transform: translateX(-50%);
     display: block;
     opacity: 0;
     transition: all ease 0.15s;
     visibility: hidden;
     font-family: 'notosans-semibold';
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    white-space: nowrap;
 }
 .message-valid::before{
     position: absolute;
