--- a/public/asset/css/base.css
+++ b/public/asset/css/base.css
@@ -51,6 +51,14 @@ a {
   padding-left: 8px;
   cursor: pointer;
 }
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
 .modal {
   visibility: hidden;
   opacity: 0;
