--- a/public/asset/css/input.css
+++ b/public/asset/css/input.css
@@ -1,96 +1,113 @@
 /* WebKit, Edge */
 ::-webkit-input-placeholder {
-    font-family: 'notosans-italic';
-    color: var(--border__input);
+  font-family: "notosans-italic";
+  color: var(--border__input);
 }
 /* Firefox 4-18 */
-:-moz-placeholder { 
-    font-family: 'notosans-italic';
-    color: var(--border__input);
+:-moz-placeholder {
+  font-family: "notosans-italic";
+  color: var(--border__input);
 }
 /* Firefox 19+ */
-::-moz-placeholder { 
-    font-family: 'notosans-italic';
-    color: var(--border__input);
+::-moz-placeholder {
+  font-family: "notosans-italic";
+  color: var(--border__input);
 }
 /* IE 10-11 */
-:-ms-input-placeholder { 
-    font-family: 'notosans-italic';
-    color: var(--border__input);
+:-ms-input-placeholder {
+  font-family: "notosans-italic";
+  color: var(--border__input);
 }
 /* Edge */
-::-ms-input-placeholder { 
-    font-family: 'notosans-italic';
-    color: var(--border__input);
+::-ms-input-placeholder {
+  font-family: "notosans-italic";
+  color: var(--border__input);
 }
 /* MODERN BROWSER */
-::placeholder { 
-    font-family: 'notosans-italic';
-    color: var(--border__input);
+::placeholder {
+  font-family: "notosans-italic";
+  color: var(--border__input);
+}
+::-webkit-inner-spin-button {
+  display: none;
+}
+::-webkit-calendar-picker-indicator {
+  background: var(--url__icon);
+  background-position: -120px -306px;
+  width: 12px;
+  padding: 4px 10px;
+  height: 22px;
+}
+::-webkit-calendar-picker-indicator:hover {
+  background-color: #e0e0e0;
+}
+input[type="date"] {
+  padding-right: 0;
 }
 
-.input{
-    font-size: 13px;
-    height: var(--input__height);
-    position: relative;
-    padding: 0 12px 0 10px;
-    border-radius: 2px;
-    border: solid 1px var(--border__input);
-    width: 100%;
-    outline: none;
-    background-color: var(--while__color);
-    font-family: "notosans-regular";  
+.input {
+  font-size: 13px;
+  height: var(--input__height);
+  position: relative;
+  padding: 0 12px 0 10px;
+  border-radius: 2px;
+  border: solid 1px var(--border__input);
+  width: 100%;
+  outline: none;
+  background-color: var(--while__color);
+  font-family: "notosans-regular";
 }
-.input:hover{
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+.input:hover {
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
-.input:focus{
-    border-color: var(--primary__color);
-    box-shadow: none;
+.input:focus {
+  border-color: var(--primary__color);
+  box-shadow: none;
 }
 
 /* validate */
-.is-valid .input{
-    border-color: red;
+.is-valid .input {
+  border-color: red;
 }
-.is-valid{
-    position: relative;
+.is-valid {
+  position: relative;
 }
-.message-valid{
-    background-color: #FF7777;
-    color: #fff;
-    border-radius: 3px;
-    padding: 4px 8px;
-    text-align: center;
-    position: absolute;
-    z-index: 10;
-    top: 111%;
-    left: 50%;
-    transform: translateX(-50%);
-    display: block;
-    opacity: 0;
-    transition: all ease 0.15s;
-    visibility: hidden;
-    font-family: 'notosans-semibold';
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-    white-space: nowrap;
+.message-valid {
+  background-color: #ff7777;
+  color: #fff;
+  border-radius: 3px;
+  padding: 4px 8px;
+  text-align: center;
+  position: absolute;
+  z-index: 10;
+  top: 111%;
+  left: 50%;
+  transform: translateX(-50%);
+  display: block;
+  opacity: 0;
+  transition: all ease 0.15s;
+  visibility: hidden;
+  font-family: "notosans-semibold";
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  white-space: nowrap;
 }
-.message-valid::before{
-    position: absolute;
-    top: -5px;
-    content: '';
-    width:0px;
-    transition: all ease 0.15s;
-    left: 50%;
-    transform: translateX(-50%);
-    height:0px;
-    border-left:8px solid transparent;
-    border-right:8px solid transparent;
-    border-bottom:8px solid #FF7777;
-    opacity: 0;
-    visibility: hidden;
+.message-valid::before {
+  position: absolute;
+  top: -5px;
+  content: "";
+  width: 0px;
+  transition: all ease 0.15s;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 0px;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-bottom: 8px solid #ff7777;
+  opacity: 0;
+  visibility: hidden;
 }
-.is-valid:hover .message-valid,.is-valid:hover .message-valid::before{
-    opacity: 1;
-    visibility: visible;
+.is-valid:hover .message-valid,
+.is-valid:hover .message-valid::before {
+  opacity: 1;
+  visibility: visible;
 }
