--- a/public/asset/css/button.css
+++ b/public/asset/css/button.css
@@ -3,17 +3,16 @@
     color: var(--text__color);
     font-family: "notosans-semibold";  
     border: solid 1px #8d9096;;
-    padding: 8px 19px 9px 19px;
+    padding: 0 19px;
     cursor: pointer;
     outline: none;
     min-width: 80px;
-    border-radius: 4px;
+    border-radius: 3px;
     height: var(--primary__button-height);
     background-color: var(--while__color);
-    font-size: 14px;
 }
 .btn:focus{
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    box-shadow: 0 0 0 4px #e0e0e0;
 }
 .btn:hover{
     background-color: #d2d3d6;
