--- a/public/asset/css/button.css
+++ b/public/asset/css/button.css
@@ -1,7 +1,7 @@
 .btn{
     border: 1px solid transparent;
     color: var(--text__color);
-    font-family: "notosans-semibold";  
+    font-family: "notosans-bold";  
     border: solid 1px #8d9096;;
     padding: 0 19px;
     cursor: pointer;
@@ -10,6 +10,9 @@
     border-radius: 3px;
     height: var(--primary__button-height);
     background-color: var(--while__color);
+}
+.btn-radius{
+  border-radius: 30px;
 }
 .btn:focus{
     box-shadow: 0 0 0 4px #e0e0e0;
